results/SVCOMP/conversational/log-ExLazy-2024_03_10_17_06_03.txt
class Main {

  //@ requires x == null && y == 0;
  //@ ensures System.out.println(1);
  public static void test(Main x, int y) {
    if (x == null && y == 0) {
      System.out.println(1);
    } else if (x != null) {
      System.out.println(2);
      assert false;
    }
  }

  //@ requires n1 == 0;
  //@ ensures test(null, 0);
  //@ also
  //@ requires n1 != 0;
  //@ ensures test(null, n2);
  public static void f(int n1, int n2) {
    if (n1 == 0) test(null, 0);
    else test(null, n2);
  }
}
/home/max/Documents/JMLGPT/tmp/ExLazy.java:4: error: incompatible types: void cannot be converted to boolean
  //@ ensures System.out.println(1);
                                ^
/home/max/Documents/JMLGPT/tmp/ExLazy.java:15: error: incompatible types: void cannot be converted to boolean
  //@ ensures test(null, 0);
                  ^
/home/max/Documents/JMLGPT/tmp/ExLazy.java:18: error: incompatible types: void cannot be converted to boolean
  //@ ensures test(null, n2);
                  ^
3 errors

class Main {

  //@ requires x == null && y == 0;
  //@ ensures true;
  public static void test(Main x, int y) {
    if (x == null && y == 0) {
      System.out.println(1);
    } else if (x != null) {
      System.out.println(2);
      assert false;
    }
  }

  //@ requires n1 == 0;
  //@ ensures true;
  //@ also
  //@ requires n1 != 0;
  //@ ensures true;
  public static void f(int n1, int n2) {
    if (n1 == 0) test(null, 0);
    else test(null, n2);
  }
}
/home/max/Documents/JMLGPT/tmp/ExLazy.java:21: verify: The prover cannot establish an assertion (NullFormal: /home/max/Documents/JMLGPT/tmp/ExLazy.java:5:) in method f: x in test(Main,int)
    else test(null, n2);
              ^
/home/max/Documents/JMLGPT/tmp/ExLazy.java:5: verify: Associated declaration: /home/max/Documents/JMLGPT/tmp/ExLazy.java:21:
  public static void test(Main x, int y) {
                          ^
2 verification failures

class Main {

  //@ requires x == null && y == 0;
  //@ ensures true;
  public static void test(Main x, int y) {
    if (x == null && y == 0) {
      System.out.println(1);
    } else if (x != null) {
      System.out.println(2);
      assert false;
    }
  }

  //@ requires n1 == 0;
  //@ ensures true;
  //@ also
  //@ requires n1 != 0;
  //@ ensures true;
  public static void f(int n1, int n2) {
    if (n1 == 0) test(null, 0);
    else test(null, n2);
  }
}
/home/max/Documents/JMLGPT/tmp/ExLazy.java:21: verify: The prover cannot establish an assertion (NullFormal: /home/max/Documents/JMLGPT/tmp/ExLazy.java:5:) in method f: x in test(Main,int)
    else test(null, n2);
              ^
/home/max/Documents/JMLGPT/tmp/ExLazy.java:5: verify: Associated declaration: /home/max/Documents/JMLGPT/tmp/ExLazy.java:21:
  public static void test(Main x, int y) {
                          ^
2 verification failures

class Main {

  //@ requires x == null && y == 0;
  //@ ensures true;
  public static void test(Main x, int y) {
    if (x == null && y == 0) {
      System.out.println(1);
    } else if (x != null) {
      System.out.println(2);
      assert false;
    }
  }

  //@ requires n1 == 0;
  //@ ensures true;
  //@ also
  //@ requires n1 != 0;
  //@ ensures true;
  public static void f(int n1, int n2) {
    if (n1 == 0) test(null, 0);
    else test(null, n2);
  }
}
/home/max/Documents/JMLGPT/tmp/ExLazy.java:21: verify: The prover cannot establish an assertion (NullFormal: /home/max/Documents/JMLGPT/tmp/ExLazy.java:5:) in method f: x in test(Main,int)
    else test(null, n2);
              ^
/home/max/Documents/JMLGPT/tmp/ExLazy.java:5: verify: Associated declaration: /home/max/Documents/JMLGPT/tmp/ExLazy.java:21:
  public static void test(Main x, int y) {
                          ^
2 verification failures

class Main {

  //@ requires x == null && y == 0;
  //@ ensures true;
  public static void test(Main x, int y) {
    if (x == null && y == 0) {
      System.out.println(1);
    } else if (x != null) {
      System.out.println(2);
      assert false;
    }
  }

  //@ requires n1 == 0;
  //@ ensures true;
  //@ also
  //@ requires n1 != 0;
  //@ ensures true;
  public static void f(int n1, int n2) {
    if (n1 == 0) test(null, 0);
    else test(null, n2);
  }
}
/home/max/Documents/JMLGPT/tmp/ExLazy.java:21: verify: The prover cannot establish an assertion (NullFormal: /home/max/Documents/JMLGPT/tmp/ExLazy.java:5:) in method f: x in test(Main,int)
    else test(null, n2);
              ^
/home/max/Documents/JMLGPT/tmp/ExLazy.java:5: verify: Associated declaration: /home/max/Documents/JMLGPT/tmp/ExLazy.java:21:
  public static void test(Main x, int y) {
                          ^
2 verification failures

class Main {

  //@ requires x == null && y == 0;
  //@ ensures true;
  public static void test(Main x, int y) {
    if (x == null && y == 0) {
      System.out.println(1);
    } else if (x != null) {
      System.out.println(2);
      assert false;
    }
  }

  //@ requires n1 == 0;
  //@ ensures true;
  //@ also
  //@ requires n1 != 0;
  //@ ensures true;
  public static void f(int n1, int n2) {
    if (n1 == 0) test(null, 0);
    else test(null, n2);
  }
}
/home/max/Documents/JMLGPT/tmp/ExLazy.java:21: verify: The prover cannot establish an assertion (NullFormal: /home/max/Documents/JMLGPT/tmp/ExLazy.java:5:) in method f: x in test(Main,int)
    else test(null, n2);
              ^
/home/max/Documents/JMLGPT/tmp/ExLazy.java:5: verify: Associated declaration: /home/max/Documents/JMLGPT/tmp/ExLazy.java:21:
  public static void test(Main x, int y) {
                          ^
2 verification failures

class Main {

  //@ requires x == null && y == 0;
  //@ ensures true;
  public static void test(Main x, int y) {
    if (x == null && y == 0) {
      System.out.println(1);
    } else if (x != null) {
      System.out.println(2);
      assert false;
    }
  }

  //@ requires n1 == 0;
  //@ ensures true;
  //@ also
  //@ requires n1 != 0;
  //@ ensures true;
  public static void f(int n1, int n2) {
    if (n1 == 0) test(null, 0);
    else test(null, n2);
  }
}
/home/max/Documents/JMLGPT/tmp/ExLazy.java:21: verify: The prover cannot establish an assertion (NullFormal: /home/max/Documents/JMLGPT/tmp/ExLazy.java:5:) in method f: x in test(Main,int)
    else test(null, n2);
              ^
/home/max/Documents/JMLGPT/tmp/ExLazy.java:5: verify: Associated declaration: /home/max/Documents/JMLGPT/tmp/ExLazy.java:21:
  public static void test(Main x, int y) {
                          ^
2 verification failures

class Main {

  //@ requires x == null && y == 0;
  //@ ensures true;
  public static void test(Main x, int y) {
    if (x == null && y == 0) {
      System.out.println(1);
    } else if (x != null) {
      System.out.println(2);
      assert false;
    }
  }

  //@ requires n1 == 0;
  //@ ensures true;
  //@ also
  //@ requires n1 != 0;
  //@ ensures true;
  public static void f(int n1, int n2) {
    if (n1 == 0) test(null, 0);
    else test(null, n2);
  }
}
/home/max/Documents/JMLGPT/tmp/ExLazy.java:21: verify: The prover cannot establish an assertion (NullFormal: /home/max/Documents/JMLGPT/tmp/ExLazy.java:5:) in method f: x in test(Main,int)
    else test(null, n2);
              ^
/home/max/Documents/JMLGPT/tmp/ExLazy.java:5: verify: Associated declaration: /home/max/Documents/JMLGPT/tmp/ExLazy.java:21:
  public static void test(Main x, int y) {
                          ^
2 verification failures

class Main {

  //@ requires x == null && y == 0;
  //@ ensures true;
  public static void test(Main x, int y) {
    if (x == null && y == 0) {
      System.out.println(1);
    } else if (x != null) {
      System.out.println(2);
      assert false;
    }
  }

  //@ requires n1 == 0;
  //@ ensures true;
  //@ also
  //@ requires n1 != 0;
  //@ ensures true;
  public static void f(int n1, int n2) {
    if (n1 == 0) test(null, 0);
    else test(null, n2);
  }
}
/home/max/Documents/JMLGPT/tmp/ExLazy.java:21: verify: The prover cannot establish an assertion (NullFormal: /home/max/Documents/JMLGPT/tmp/ExLazy.java:5:) in method f: x in test(Main,int)
    else test(null, n2);
              ^
/home/max/Documents/JMLGPT/tmp/ExLazy.java:5: verify: Associated declaration: /home/max/Documents/JMLGPT/tmp/ExLazy.java:21:
  public static void test(Main x, int y) {
                          ^
2 verification failures

class Main {

  //@ requires x == null && y == 0;
  //@ ensures true;
  public static void test(Main x, int y) {
    if (x == null && y == 0) {
      System.out.println(1);
    } else if (x != null) {
      System.out.println(2);
      assert false;
    }
  }

  //@ requires n1 == 0;
  //@ ensures true;
  //@ also
  //@ requires n1 != 0;
  //@ ensures true;
  public static void f(int n1, int n2) {
    if (n1 == 0) test(null, 0);
    else test(null, n2);
  }
}
/home/max/Documents/JMLGPT/tmp/ExLazy.java:21: verify: The prover cannot establish an assertion (NullFormal: /home/max/Documents/JMLGPT/tmp/ExLazy.java:5:) in method f: x in test(Main,int)
    else test(null, n2);
              ^
/home/max/Documents/JMLGPT/tmp/ExLazy.java:5: verify: Associated declaration: /home/max/Documents/JMLGPT/tmp/ExLazy.java:21:
  public static void test(Main x, int y) {
                          ^
2 verification failures

